Mon Aug  8 17:40:48 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/transport/framework/TransportClient.h:
        * dds/DCPS/transport/framework/TransportClient.cpp:
        * dds/DCPS/transport/framework/TransportDefs.h:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportRegistry.cpp:
        * dds/DCPS/transport/multicast/MulticastInst.cpp:
        * dds/DCPS/transport/tcp/TcpSendStrategy.cpp:
        * dds/DCPS/transport/tcp/TcpTransport.cpp:
        * dds/DCPS/transport/udp/UdpInst.cpp:
        * java/jms/src/org/opendds/jms/transport/TransportFactory.java:
        * performance-tests/Bench/src/Publication.cpp:
        * performance-tests/Bench/src/Subscription.cpp:
        * tests/DCPS/ConfigTransports/common.cpp:
        * tests/DCPS/ConfigTransports/run_test.pl:
        * tests/DCPS/FooTest3_0/SubDriver.h:
        * tests/DCPS/FooTest3_1/SubDriver.h:
        * tests/DCPS/FooTest3_2/SubDriver.h:
        * tests/transport/simple/PubDriver.cpp:
        * tests/transport/simple/SubDriver.cpp:
        * tools/modeling/codegen/model/Delegate.h:
        * tools/modeling/codegen/model/Delegate.cpp:
        * tools/modeling/codegen/model/Entities.cpp:

          Fixed scoreboard compiler and fuzz errors, corrected wchar support.

Sun Aug  7 23:47:42 UTC 2011  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/DCPS/Ownership/Ownership.mpc:

          Fix some static build issues.

Sat Aug  6 00:47:30 UTC 2011  Paul Calabrese  <calabrese_p@ociweb.com>

          Merged the branch "sbir_transport" which includes a
          refactoring of the transport configuration to simplify
          configuration of transports and allow mixed transports
          within a single topic as well as other advanced transport
          configurations.  Note that this is not backward compatible