@@ -16,5 +16,19 @@ test.dir=test
 test.report.dir=${test.dir}/report
 rsrc.dir=resources
 dist.dir=dist
-staging.dir=${dist.dir}/staging
+staging.dir=${dist.dir}/${app.name}
 staging.jar=${staging.dir}/lib/${app.name}.jar
+
+customBuildCallbacks = ant_custom.xml
+customBuildCallbacks.failonerror = true
+customBuildCallbacks.inheritall = true
+bin.includes = build/
+bin.includes = src/xsd/
+bin.includes = .
+source.. = test/src/,\
+           src/xsd/,\
+           src/java/
+bin.includes = lib/commons-cli-1.2.jar,\
+               src/xsd/
+src.includes = src/xsd/,\
+               lib/commons-cli-1.2.jar
